patch to qcsapi client

--- a/patches/user/qtna_wifi_ax/qcsapi-client-ax-v7.0.0.7/Makefile
+++ b/patches/user/qtna_wifi_ax/qcsapi-client-ax-v7.0.0.7/Makefile
@@ -1,5 +1,4 @@
 
-CC = gcc
 CFLAGS += -I. -I./common -fPIC -O -g -Wall -Werror -Wno-unused-variable -Wno-unused-parameter -fstrict-aliasing
 CFLAGS += -D_GNU_SOURCE
 
@@ -44,15 +43,14 @@ LIB_OBJS = \
 	qcsapi_rpc_common/common/rpc_raw.o \
 	qcsapi_grabber.o
 
-TARGETS = c_rpc_qcsapi_sample \
+TARGETS = \
 	qcsapi_sockrpc \
 	qcsapi_sockrpc_static \
 	qcsapi_pcie \
 	qcsapi_pcie_static \
 	qcsapi_sockraw \
 	qcsapi_sockraw_static \
-	$(LIB_REALNAME) \
-	qcsapi_cpptest
+	$(LIB_REALNAME)
 
 CFLAGS += -DPCIE_RPC_TYPE=RPC_TYPE_QCSAPI_PCIE
 CFLAGS += -DPCIE_RPC_LOCK_ENABLE=1
@@ -103,3 +101,12 @@ qcsapi_cpptest: ${COMMON_PROG_OBJS:%=build/%} ${LIB_OBJS}
 clean:
 	rm -rf build $(LIB_LDNAME)* $(TARGETS) $(LIB_OBJS)
 
+install:
+	-mkdir -p ${DEST}/usr/bin
+	-mkdir -p ${DEST}/usr/lib
+	cp qcsapi_pcie qcsapi_sockrpc qcsapi_sockraw ${DEST}/usr/bin
+	cp ${LIB_REALNAME} ${DEST}/usr/lib && \
+	    pushd ${DEST}/usr/lib && \
+	    ln -sf ${LIB_REALNAME} ${LIB_SONAME} && \
+	    ln -sf ${LIB_SONAME} ${LIB_LDNAME} && \
+	    popd
