init procedure for QSR10G

--- a/patches/user/qtna_wifi_ax/Makefile
+++ b/patches/user/qtna_wifi_ax/Makefile
@@ -7,6 +7,8 @@ QCS_SDK_VER ?= v7.0.0.7
 BUILD_MODULE_PATH = module
 BUILD_QCSAPI_PATH = qcsapi-client-ax-$(QCS_SDK_VER)
 
+MODULE_NAME = qsr10g-pcie.ko
+
 RC_LEVEL_QTN="/etc/init.d/rc33"
 
 ifeq ("$(ROMFSDIR)", "")
@@ -23,6 +25,16 @@ clean:
 
 rcX:
 	$(ROMFSINST) -a "mkdir -p /tmp/qtn" $(RC_LEVEL_QTN)
+	$(ROMFSINST) -a "insmod /lib/modules/$(MODULE_NAME)" $(RC_LEVEL_QTN)
+	$(ROMFSINST) -a "brctl addif br0 host0" $(RC_LEVEL_QTN)
+	$(ROMFSINST) -a "ifconfig host0 up" $(RC_LEVEL_QTN)
+	$(ROMFSINST) -a "echo wlan 0 mode 1 cpu 3 > /proc/fc/ctrl/smp_dispatch_wifi_tx" $(RC_LEVEL_QTN)
+	$(ROMFSINST) -a "echo wlan 0 mode 1 cpu 2 > /proc/fc/ctrl/smp_dispatch_wifi_rx" $(RC_LEVEL_QTN)
+	$(ROMFSINST) -a "echo 1 > proc/driver/cortina/ni/qm_eq_refill_inttrupt" $(RC_LEVEL_QTN)
+	$(ROMFSINST) -a "sleep 1" $(RC_LEVEL_QTN)
+	$(ROMFSINST) -a "echo 2 > /proc/irq/23/smp_affinity" $(RC_LEVEL_QTN)
+	$(ROMFSINST) -a "echo 2 > /proc/irq/24/smp_affinity" $(RC_LEVEL_QTN)
+	$(ROMFSINST) -a "echo 1 > /proc/irq/13/smp_affinity" $(RC_LEVEL_QTN)
 	
 romfs:
 	$(MAKE) -C $(BUILD_MODULE_PATH) install DESTDIR=$(ROMFSDIR) 
